// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceStatisticsCountChart when fetching more data when the fetchMore query returns data passes the data to the line chart 1`] = `
Array [
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Total",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Succeeded",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        22,
      ],
      Array [
        "2020-07-01",
        41,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Failed",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Canceled",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Skipped",
  },
]
`;

exports[`InstanceStatisticsCountChart with data passes the data to the line chart 1`] = `
Array [
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        22,
      ],
      Array [
        "2020-07-01",
        41,
      ],
    ],
    "name": "Total",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
    ],
    "name": "Succeeded",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        21,
      ],
      Array [
        "2020-07-01",
        10,
      ],
    ],
    "name": "Failed",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        22,
      ],
      Array [
        "2020-07-01",
        41,
      ],
    ],
    "name": "Canceled",
  },
  Object {
    "data": Array [
      Array [
        "2020-06-01",
        22,
      ],
      Array [
        "2020-07-01",
        41,
      ],
    ],
    "name": "Skipped",
  },
]
`;
